# ETL_project

./: ETLprj_config.yaml  ETLprj_extract.ipynb  LICENSE  README.md  README.old  W001_config.yaml  pyproject.toml
Dataset/: .~lock.caso etl.csv#  caso etl 2.csv  caso etl 3.csv
