[project]
name = "etl-project"
version = "1.0.0"
description = "Ejercicio de Extracción, Transformacion y Carga (ETL) de datos usando Healthcare Dataset - EDA desde kaggle"
authors = [
    {name = "Yoniliman Galvis",email = "yoniliman.galves@uao.edu.co"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "traitlets (>=5.14.3,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.15.0"]
build-backend = "poetry.core.masonry.api"
